--- a/example_3_basic_spatialisation_OF/example_3_basic_spatialisation_OF.vcxproj
+++ b/example_3_basic_spatialisation_OF/example_3_basic_spatialisation_OF.vcxproj
@@ -180,13 +180,17 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Room.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
     <ClCompile Include="src\SoundSourcer.cpp" />
+    <ClCompile Include="Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Room.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="src\SoundSource.h" />
+    <ClInclude Include="Wall.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
