--- a/example_3_basic_spatialisation_OF/example_3_basic_spatialisation_OF.vcxproj.filters
+++ b/example_3_basic_spatialisation_OF/example_3_basic_spatialisation_OF.vcxproj.filters
@@ -10,8 +10,12 @@
     <ClCompile Include="src\SoundSourcer.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="Room.cpp" />
-    <ClCompile Include="Wall.cpp" />
+    <ClCompile Include="Room.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="Wall.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -25,8 +29,12 @@
     <ClInclude Include="src\SoundSource.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="Room.h" />
-    <ClInclude Include="Wall.h" />
+    <ClInclude Include="Room.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="Wall.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
