adds corner insertion into wall and drawing of walls (also moves files into src folder)

--- a/example_3_basic_spatialisation_OF/example_3_basic_spatialisation_OF.vcxproj
+++ b/example_3_basic_spatialisation_OF/example_3_basic_spatialisation_OF.vcxproj
@@ -180,17 +180,17 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Room.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
+    <ClCompile Include="src\Room.cpp" />
     <ClCompile Include="src\SoundSourcer.cpp" />
-    <ClCompile Include="Wall.cpp" />
+    <ClCompile Include="src\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Room.h" />
     <ClInclude Include="src\ofApp.h" />
+    <ClInclude Include="src\Room.h" />
     <ClInclude Include="src\SoundSource.h" />
-    <ClInclude Include="Wall.h" />
+    <ClInclude Include="src\Wall.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
