--- a/example_4_image_method_reverberation_OF/example_3_basic_spatialisation_OF.vcxproj
+++ b/example_4_image_method_reverberation_OF/example_3_basic_spatialisation_OF.vcxproj
@@ -184,12 +184,14 @@
     <ClCompile Include="src\ofApp.cpp" />
     <ClCompile Include="src\Room.cpp" />
     <ClCompile Include="src\SoundSourcer.cpp" />
+    <ClCompile Include="src\SourceImages.cpp" />
     <ClCompile Include="src\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="src\Room.h" />
     <ClInclude Include="src\SoundSource.h" />
+    <ClInclude Include="src\SourceImages.h" />
     <ClInclude Include="src\Wall.h" />
   </ItemGroup>
   <ItemGroup>
