--- a/example_4_image_method_reverberation_OF/example_3_basic_spatialisation_OF.vcxproj.filters
+++ b/example_4_image_method_reverberation_OF/example_3_basic_spatialisation_OF.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClCompile Include="src\Wall.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="src\SourceImages.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -33,6 +36,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="src\Wall.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SourceImages.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
