--- a/example_4_image_method_reverberation_OF/3DTI_Toolkit/3DTI_Toolkit.vcxproj
+++ b/example_4_image_method_reverberation_OF/3DTI_Toolkit/3DTI_Toolkit.vcxproj
@@ -56,6 +56,7 @@
     <ClInclude Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\Transform.h" />
     <ClInclude Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\UPCEnvironment.h" />
     <ClInclude Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\Vector3.h" />
+    <ClInclude Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\Waveguide.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\3dti_AudioToolkit\3dti_Toolkit\BinauralSpatializer\BRIR.cpp" />
@@ -88,6 +89,7 @@
     <ClCompile Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\Transform.cpp" />
     <ClCompile Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\UPCEnvironment.cpp" />
     <ClCompile Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\Vector3.cpp" />
+    <ClCompile Include="..\..\3dti_AudioToolkit\3dti_Toolkit\Common\Waveguide.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -217,7 +219,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>..\..\3dti_AudioToolkit\3dti_Toolkit</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\3dti_AudioToolkit\3dti_ResourceManager\third_party_libraries\boost_circular_buffer;..\..\3dti_AudioToolkit\3dti_Toolkit</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
