adds the creation of images of the room and draw them to test

--- a/example_4_image_method_reverberation_OF/3DTI_Toolkit/3DTI_Toolkit.vcxproj
+++ b/example_4_image_method_reverberation_OF/3DTI_Toolkit/3DTI_Toolkit.vcxproj
@@ -166,7 +166,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>..\..\3dti_AudioToolkit\3dti_Toolkit</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\3dti_AudioToolkit\3dti_ResourceManager\third_party_libraries\boost_circular_buffer;..\..\3dti_AudioToolkit\3dti_Toolkit</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
