Renames visual studio projects and solution

--- a/example_4_image_method_reverberation_OF/image_source_method.vcxproj
+++ b/example_4_image_method_reverberation_OF/image_source_method.vcxproj
@@ -26,7 +26,8 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7FD42DF7-442E-479A-BA76-D0022F99702A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>example_3_basic_spatialisation_OF</RootNamespace>
+    <RootNamespace>image_source_method</RootNamespace>
+    <ProjectName>image_source_method</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
