--- a/vstudio/image_source_method.vcxproj
+++ b/vstudio/image_source_method.vcxproj
@@ -181,19 +181,19 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\ofApp.cpp" />
-    <ClCompile Include="src\Room.cpp" />
-    <ClCompile Include="src\SoundSourcer.cpp" />
-    <ClCompile Include="src\SourceImages.cpp" />
-    <ClCompile Include="src\Wall.cpp" />
+    <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\ofApp.cpp" />
+    <ClCompile Include="..\src\Room.cpp" />
+    <ClCompile Include="..\src\SoundSourcer.cpp" />
+    <ClCompile Include="..\src\SourceImages.cpp" />
+    <ClCompile Include="..\src\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ofApp.h" />
-    <ClInclude Include="src\Room.h" />
-    <ClInclude Include="src\SoundSource.h" />
-    <ClInclude Include="src\SourceImages.h" />
-    <ClInclude Include="src\Wall.h" />
+    <ClInclude Include="..\src\ofApp.h" />
+    <ClInclude Include="..\src\Room.h" />
+    <ClInclude Include="..\src\SoundSource.h" />
+    <ClInclude Include="..\src\SourceImages.h" />
+    <ClInclude Include="..\src\Wall.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
