--- a/vstudio/image_source_method.vcxproj.filters
+++ b/vstudio/image_source_method.vcxproj.filters
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="src\ofApp.cpp">
+    <ClCompile Include="..\src\ofApp.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\main.cpp">
+    <ClCompile Include="..\src\main.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\SoundSourcer.cpp">
+    <ClCompile Include="..\src\SoundSourcer.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Room.cpp">
+    <ClCompile Include="..\src\Room.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Wall.cpp">
+    <ClCompile Include="..\src\Wall.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\SourceImages.cpp">
+    <ClCompile Include="..\src\SourceImages.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
@@ -26,19 +26,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ofApp.h">
+    <ClInclude Include="..\src\ofApp.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\SoundSource.h">
+    <ClInclude Include="..\src\SoundSource.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Room.h">
+    <ClInclude Include="..\src\Room.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\Wall.h">
+    <ClInclude Include="..\src\Wall.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="src\SourceImages.h">
+    <ClInclude Include="..\src\SourceImages.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
