--- a/vstudio/image_source_method.vcxproj
+++ b/vstudio/image_source_method.vcxproj
@@ -181,21 +181,21 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\ISM\ISM.cpp" />
+    <ClCompile Include="..\ISM\Room.cpp" />
+    <ClCompile Include="..\ISM\SourceImages.cpp" />
+    <ClCompile Include="..\ISM\Wall.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\ofApp.cpp" />
-    <ClCompile Include="..\src\Room.cpp" />
-    <ClCompile Include="..\src\ISM.cpp" />
     <ClCompile Include="..\src\SoundSource.cpp" />
-    <ClCompile Include="..\src\SourceImages.cpp" />
-    <ClCompile Include="..\src\Wall.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\ISM\ISM.h" />
+    <ClInclude Include="..\ISM\Room.h" />
+    <ClInclude Include="..\ISM\SourceImages.h" />
+    <ClInclude Include="..\ISM\Wall.h" />
     <ClInclude Include="..\src\ofApp.h" />
-    <ClInclude Include="..\src\Room.h" />
-    <ClInclude Include="..\src\ISM.h" />
     <ClInclude Include="..\src\SoundSource.h" />
-    <ClInclude Include="..\src\SourceImages.h" />
-    <ClInclude Include="..\src\Wall.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
