--- a/vstudio/image_source_method.vcxproj
+++ b/vstudio/image_source_method.vcxproj
@@ -181,11 +181,33 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxBaseGui.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxButton.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxColorPicker.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxGuiGroup.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxInputField.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxLabel.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxPanel.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxSlider.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxSliderGroup.cpp" />
+    <ClCompile Include="..\..\addons\ofxGui\src\ofxToggle.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\ofApp.cpp" />
     <ClCompile Include="..\src\SoundSource.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxBaseGui.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxButton.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxColorPicker.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxGui.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxGuiGroup.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxGuiUtils.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxInputField.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxLabel.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxPanel.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxSlider.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxSliderGroup.h" />
+    <ClInclude Include="..\..\addons\ofxGui\src\ofxToggle.h" />
     <ClInclude Include="..\src\ofApp.h" />
     <ClInclude Include="..\src\SoundSource.h" />
   </ItemGroup>
