1.- Increase (OF_KEY_INSERT) or decrease (OF_KEY_DEL) numberOfSilencedFrames for the reverb stage. 2.- Increase (OF_KEY_PAGE_UP) or decrease (OF_KEY_PAGE_DOWN) MaxDistanceSourcesToListener, to control the number of visible sources depending on the distance between them and the listener 3.- Allows recording Impulse Response of the system. OFFLINE WAV RECORD. (OF_KEY_F12)

--- a/vstudio/image_source_method.vcxproj
+++ b/vstudio/image_source_method.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\ofApp.cpp" />
     <ClCompile Include="..\src\SoundSource.cpp" />
+    <ClCompile Include="..\src\WavWriter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\addons\ofxGui\src\ofxBaseGui.h" />
@@ -213,6 +214,7 @@
     <ClInclude Include="..\..\addons\ofxGui\src\ofxToggle.h" />
     <ClInclude Include="..\src\ofApp.h" />
     <ClInclude Include="..\src\SoundSource.h" />
+    <ClInclude Include="..\src\WavWriter.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(OF_ROOT)\libs\openFrameworksCompiled\project\vs\openframeworksLib.vcxproj">
